channge base url

--- a/app.json
+++ b/app.json
@@ -33,7 +33,7 @@
       "expo-router"
     ],
     "experiments": {
-      "baseUrl": "/expo-gh-pages",
+      "baseUrl": "/deelbaar",
       "typedRoutes": true
     }
   }
