--- a/app.json
+++ b/app.json
@@ -29,12 +29,12 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "experiments": {
-      "baseUrl": "/",
-      "typedRoutes": true
-    },
     "plugins": [
       "expo-router"
-    ]
+    ],
+    "experiments": {
+      "baseUrl": "/deelbaar",
+      "typedRoutes": true
+    }
   }
 }
