--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@expo/vector-icons": "^14.0.0",
     "@gorhom/bottom-sheet": "^4.6.1",
     "@react-navigation/native": "^6.0.2",
+    "@types/react-native-snap-carousel": "^3.8.11",
     "appwrite": "^14.0.0",
     "expo": "~50.0.13",
     "expo-font": "~11.10.3",
@@ -38,10 +39,12 @@
     "react-native-map-clustering": "^3.3.0",
     "react-native-maps": "1.10.0",
     "react-native-reanimated": "~3.6.2",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "react-native-gesture-handler": "~2.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
