--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "clean": "expo start -c",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "deploy": "gh-pages -t -d dist",
@@ -19,6 +19,7 @@
     "@expo/vector-icons": "^14.0.0",
     "@gorhom/bottom-sheet": "^4.6.1",
     "@react-navigation/native": "^6.0.2",
+    "@tanstack/react-query": "^5.31.0",
     "@types/react-native-snap-carousel": "^3.8.11",
     "appwrite": "^14.0.0",
     "expo": "~50.0.13",
@@ -36,6 +37,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.5",
     "react-native-appwrite": "^0.2.2",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-map-clustering": "^3.3.0",
     "react-native-maps": "1.10.0",
     "react-native-reanimated": "~3.6.2",
@@ -43,8 +45,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.6",
-    "react-native-gesture-handler": "~2.14.0"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
