--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@react-navigation/native": "^6.0.2",
     "@tanstack/react-query": "^5.31.0",
     "@types/react-native-snap-carousel": "^3.8.11",
-    "appwrite": "^14.0.0",
+    "appwrite": "13.0.2",
     "expo": "~50.0.13",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
