--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@expo/vector-icons": "^14.0.0",
     "@gorhom/bottom-sheet": "^4.6.1",
     "@journeyapps/react-native-quick-sqlite": "^1.3.1",
+    "@powersync/attachments": "^2.1.0",
     "@powersync/kysely-driver": "0.4.0",
     "@powersync/react-native": "^1.12.0",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/native": "^6.1.7",
     "@supabase/supabase-js": "^2.38.4",
     "base-64": "^1.0.0",
+    "base64-arraybuffer": "^1.0.2",
     "expo": "^50.0.17",
     "expo-constants": "~15.4.5",
     "expo-crypto": "~12.8.1",
