--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "base-64": "^1.0.0",
     "base64-arraybuffer": "^1.0.2",
     "expo": "^50.0.17",
+    "expo-camera": "~14.1.3",
     "expo-constants": "~15.4.5",
     "expo-crypto": "~12.8.1",
     "expo-dev-client": "~3.3.12",
@@ -35,16 +36,19 @@
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
+    "lodash": "^4.17.21",
     "postgres": "^3.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-elements": "^3.4.3",
     "react-native-fetch-api": "^3.0.0",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-get-random-values": "~1.8.0",
     "react-native-map-clustering": "^3.4.2",
     "react-native-maps": "1.10.0",
     "react-native-polyfill-globals": "^3.1.0",
+    "react-native-prompt-android": "^1.1.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
@@ -56,6 +60,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/plugin-transform-async-generator-functions": "^7.24.3",
+    "@types/lodash": "^4.17.7",
     "@types/react": "~18.2.14",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
@@ -66,12 +71,6 @@
   },
   "eslintConfig": {
     "extends": "universe/native"
-  },
-  "resolutions": {
-    "expo-modules-core": "~1.11.0"
-  },
-  "overrides": {
-    "expo-modules-core": "~1.11.0"
   },
   "expo": {
     "install": {
