--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-location": "~16.5.5",
     "expo-router": "~3.4.10",
     "expo-status-bar": "~1.11.1",
+    "expo-image-picker": "~14.7.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
     "lodash": "^4.17.21",
