--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "expo-constants": "~15.4.5",
     "expo-crypto": "~12.8.1",
     "expo-dev-client": "~3.3.12",
+    "expo-image-picker": "~14.7.1",
     "expo-linking": "~6.2.2",
     "expo-location": "~16.5.5",
     "expo-router": "~3.4.10",
     "expo-status-bar": "~1.11.1",
-    "expo-image-picker": "~14.7.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
     "lodash": "^4.17.21",
@@ -56,6 +56,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
     "text-encoding": "^0.7.0",
+    "uuid": "^10.0.0",
     "web-streams-polyfill": "3.2.1"
   },
   "devDependencies": {
