--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@azure/core-asynciterator-polyfill": "^1.0.2",
     "@expo/vector-icons": "^14.0.0",
-    "@gorhom/bottom-sheet": "^4.6.1",
+    "@gorhom/bottom-sheet": "^4.6.4",
     "@journeyapps/react-native-quick-sqlite": "^1.3.1",
     "@powersync/attachments": "^2.1.0",
     "@powersync/kysely-driver": "0.4.0",
@@ -51,6 +51,7 @@
     "react-native-polyfill-globals": "^3.1.0",
     "react-native-prompt-android": "^1.1.0",
     "react-native-reanimated": "~3.6.2",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-url-polyfill": "^2.0.0",
