--- a/package.json
+++ b/package.json
@@ -20,40 +20,42 @@
     "@powersync/attachments": "^2.1.0",
     "@powersync/kysely-driver": "0.4.0",
     "@powersync/react-native": "^1.12.0",
-    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.7",
     "@supabase/supabase-js": "^2.38.4",
     "base-64": "^1.0.0",
     "base64-arraybuffer": "^1.0.2",
-    "expo": "^50.0.17",
-    "expo-camera": "~14.1.3",
-    "expo-constants": "~15.4.5",
-    "expo-crypto": "~12.8.1",
-    "expo-dev-client": "~3.3.12",
-    "expo-image-picker": "~14.7.1",
-    "expo-linking": "~6.2.2",
-    "expo-location": "~16.5.5",
-    "expo-router": "~3.4.10",
-    "expo-status-bar": "~1.11.1",
-    "expo-system-ui": "~2.9.3",
-    "expo-web-browser": "~12.8.2",
+    "expo": "^51.0.38",
+    "expo-camera": "~15.0.16",
+    "expo-constants": "~16.0.2",
+    "expo-crypto": "~13.0.2",
+    "expo-dev-client": "~4.0.28",
+    "expo-image-picker": "~15.0.7",
+    "expo-linking": "~6.3.1",
+    "expo-location": "~17.0.1",
+    "expo-router": "~3.5.23",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.7",
+    "expo-web-browser": "~13.0.3",
     "lodash": "^4.17.21",
     "postgres": "^3.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.5",
     "react-native-elements": "^3.4.3",
+    "react-native-fast-image": "^8.6.3",
     "react-native-fetch-api": "^3.0.0",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-get-random-values": "~1.8.0",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-map-clustering": "^3.4.2",
-    "react-native-maps": "1.10.0",
+    "react-native-maps": "1.14.0",
     "react-native-polyfill-globals": "^3.1.0",
     "react-native-prompt-android": "^1.1.0",
-    "react-native-reanimated": "~3.6.2",
+    "react-native-ratings": "^8.1.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-screens": "3.31.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
     "text-encoding": "^0.7.0",
@@ -61,16 +63,16 @@
     "web-streams-polyfill": "3.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.24.0",
     "@babel/plugin-transform-async-generator-functions": "^7.24.3",
     "@types/lodash": "^4.17.7",
-    "@types/react": "~18.2.14",
+    "@types/react": "~18.2.79",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
     "eslint": "^8.57.0",
     "eslint-config-universe": "^12.0.1",
     "prettier": "^3.2.5",
-    "typescript": "^5.4.5"
+    "typescript": "~5.3.3"
   },
   "eslintConfig": {
     "extends": "universe/native"
