--- a/.github/workflows/publish-pull-request.yml
+++ b/.github/workflows/publish-pull-request.yml
@@ -3,31 +3,45 @@ on:
   pull_request:
     branches:
       - develop
+
 jobs:
   publish:
     runs-on: ubuntu-latest
     permissions:
       contents: read
       pull-requests: write
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
           node-version: 18.x
-      - name: Setup Expo
-        uses: expo/expo-github-action@v6
-        with:
-          expo-version: 6.x
-          expo-cache: true
-          eas-version: latest
-          token: ${{ secrets.EXPO_TOKEN }}
+          cache: 'yarn'  # Cache `yarn` dependencies to speed up subsequent runs
+
       - name: Install Dependencies
         run: yarn
+
       - name: Publish to Expo Go
-        run: NODE_ENV=dev expo publish --non-interactive --release-channel pr-${{ github.event.number }}
+        env:
+          NODE_ENV: dev
+        run: npx expo publish --non-interactive --release-channel pr-${{ github.event.number }}
+        continue-on-error: true  # Allows the workflow to continue even if this step fails
+
+      - name: Handle Publish Failure
+        if: failure()
+        uses: mshick/add-pr-comment@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          message: |
+            🚨 **Expo Publish Failed**
+            Please check the workflow logs for more details on why the publish step failed.
+
       - name: Add Expo Link to PR
+        if: success()
         uses: mshick/add-pr-comment@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
