--- a/.github/workflows/publish-pull-request.yml
+++ b/.github/workflows/publish-pull-request.yml
@@ -19,8 +19,9 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 18.x
-          cache: 'yarn'  # Cache `yarn` dependencies to speed up subsequent runs
-
+          cache: yarn
+          cache-dependency-path: yarn.lock
+          
       - name: Install Dependencies
         run: yarn
 
