--- a/.github/workflows/android-development-build.yml
+++ b/.github/workflows/android-development-build.yml
@@ -16,7 +16,8 @@ jobs:
         uses: actions/setup-node@v4.0.2
         with:
           node-version: 18.x
-          cache: 'npm'
+          cache: 'yarn'
+          cache-dependency-path: 'yarn.lock'
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -35,7 +36,7 @@ jobs:
           token: ${{ secrets.EXPO_TOKEN }}
 
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
 
       - name: Build Android app
         run: eas build --platform android --profile development --local --output ${{ github.workspace }}/app-release.apk
