--- a/.github/workflows/android-development-build.yml
+++ b/.github/workflows/android-development-build.yml
@@ -6,62 +6,39 @@ on:
       - develop
 
 jobs:
-  build:
+  update:
+    name: EAS Update
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
-      - name: Setup repo
+      - name: Check for EXPO_TOKEN
+        run: |
+          if [ -z "${{ secrets.EXPO_TOKEN }}" ]; then
+            echo "You must provide an EXPO_TOKEN secret linked to this project's Expo account in this repo's secrets. Learn more: https://docs.expo.dev/eas-update/github-actions"
+            exit 1
+          fi
+
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup node
-        uses: actions/setup-node@v4.0.2
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
           node-version: 18.x
-          cache: 'yarn'
-          cache-dependency-path: 'yarn.lock'
+          cache: yarn
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@v3
-
-      - name: Setup Expo
+      - name: Setup EAS
         uses: expo/expo-github-action@v8
         with:
-          expo-version: latest
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install
 
-      - name: Build Android app
-        run: eas build --platform android --profile development --local --output ${{ github.workspace }}/app-release.apk
-
-      - name: Upload APK artifact
-        uses: actions/upload-artifact@v4
+      - name: Create preview
+        uses: expo/expo-github-action/preview@v8
         with:
-          name: app-release
-          path: ${{ github.workspace }}/app-release.apk
-
-      - name: Generate QR code
-        id: generate_qr
-        run: |
-          APK_URL="https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/app-release.apk"
-          QR_CODE_URL="https://api.qrserver.com/v1/create-qr-code/?size=250x250&data=${APK_URL}"
-          echo "APK_URL=${APK_URL}" >> $GITHUB_ENV
-          echo "QR_CODE_URL=${QR_CODE_URL}" >> $GITHUB_ENV
-
-      - name: Add QR code to PR
-        if: success()
-        uses: mshick/add-pr-comment@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          message: |
-            ## Test this PR with Expo Go
-            ![QR Code](${{ env.QR_CODE_URL }})
-            **[Download APK](${{ env.APK_URL }})**
+          command: eas update --auto
