--- a/eas.json
+++ b/eas.json
@@ -15,7 +15,11 @@
         "EXPO_PUBLIC_SUPABASE_URL": "EXPO_PUBLIC_SUPABASE_URL",
         "EXPO_PUBLIC_SUPABASE_ANON_KEY": "EXPO_PUBLIC_SUPABASE_ANON_KEY"
       },
-      "distribution": "internal"
+      "distribution": "internal",
+      "android": {
+        "channel": "preview",
+        "buildType": "apk"
+      }
     },
     "production": {
       "releaseChannel": "production",
