--- a/.github/workflows/android-internal-build.yml
+++ b/.github/workflows/android-internal-build.yml
@@ -48,7 +48,7 @@ jobs:
           path: ${{ github.workspace }}/app-release.aab
 
       - name: Submit to Play Store
-        run: npx eas submit --platform android --latest --non-interactive
+        run: npx eas --profile internal --platform android --latest --non-interactive
         env:
           GOOGLE_SERVICE_ACCOUNT_KEY: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_KEY }}
           EAS_ACCESS_TOKEN: ${{ secrets.EXPO_TOKEN }}
