--- a/eas.json
+++ b/eas.json
@@ -37,6 +37,11 @@
     }
   },
   "submit": {
+    "internal": {
+      "android": {
+        "track": "internal"
+      }
+    },
     "production": {
       "android": {
         "track": "production",
