--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo-router": "~3.5.23",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
+    "expo-updates": "^0.25.27",
     "expo-web-browser": "~13.0.3",
     "lodash": "^4.17.21",
     "postgres": "^3.4.4",
