--- a/.github/workflows/android-internal-build.yml
+++ b/.github/workflows/android-internal-build.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-node@v4.0.2
         with:
           node-version: 18.x
-          cache: 'npm'
+          cache: 'yarn'
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -36,7 +36,7 @@ jobs:
           token: ${{ secrets.EXPO_TOKEN }}
 
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
 
       - name: Build Android app
         run: eas build --platform android --local --output ${{ github.workspace }}/app-release.aab
