--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" && prettier -c \"**/*.{js,jsx,ts,tsx,json}\"",
     "format": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix && prettier \"**/*.{js,jsx,ts,tsx,json}\" --write",
     "ios": "expo run:ios",
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "web": "expo start --web",
     "emu": "expo start --dev-client",
     "eas": "eas build --platform android --local"
@@ -25,7 +25,7 @@
     "@supabase/supabase-js": "^2.38.4",
     "base-64": "^1.0.0",
     "base64-arraybuffer": "^1.0.2",
-    "expo": "^51.0.38",
+    "expo": "~51.0.39",
     "expo-camera": "~15.0.16",
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
@@ -33,7 +33,7 @@
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
-    "expo-router": "~3.5.23",
+    "expo-router": "~3.5.24",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-updates": "^0.25.27",
