--- a/.github/workflows/android-internal-build.yml
+++ b/.github/workflows/android-internal-build.yml
@@ -39,13 +39,19 @@ jobs:
         run: yarn install --frozen-lockfile
 
       - name: Build Android app
-        run: eas build --platform android --local --output ${{ github.workspace }}/app-release.aab
+        run: eas build --platform android --profile produciton --local --output ${{ github.workspace }}/app-release.aab
 
       - name: Upload AAB artifact
         uses: actions/upload-artifact@v4
         with:
           name: app-release
           path: ${{ github.workspace }}/app-release.aab
+
+      - name: Upload mapping file
+        uses: actions/upload-artifact@v4
+        with:
+          name: mapping
+          path: ${{ github.workspace }}/android/app/build/outputs/mapping/release/mapping.txt
 
       - name: Submit to Play Store
         run: npx eas --profile internal --platform android --latest --non-interactive
