--- a/.github/workflows/android-internal-build.yml
+++ b/.github/workflows/android-internal-build.yml
@@ -39,7 +39,7 @@ jobs:
         run: yarn install --frozen-lockfile
 
       - name: Build Android app
-        run: eas build --platform android --profile produciton --local --output ${{ github.workspace }}/app-release.aab
+        run: eas build --platform android --profile production --local --output ${{ github.workspace }}/app-release.aab
 
       - name: Upload AAB artifact
         uses: actions/upload-artifact@v4
