--- a/.github/workflows/android-internal-build.yml
+++ b/.github/workflows/android-internal-build.yml
@@ -53,8 +53,8 @@ jobs:
           name: mapping
           path: ${{ github.workspace }}/android/app/build/outputs/mapping/release/mapping.txt
 
-      - name: Submit to Play Store
-        run: npx eas --profile internal --platform android --latest --non-interactive
-        env:
-          GOOGLE_SERVICE_ACCOUNT_KEY: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_KEY }}
-          EAS_ACCESS_TOKEN: ${{ secrets.EXPO_TOKEN }}
+#      - name: Submit to Play Store
+#        run: npx eas --profile internal --platform android --latest --non-interactive
+#        env:
+#          GOOGLE_SERVICE_ACCOUNT_KEY: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_KEY }}
+#          EAS_ACCESS_TOKEN: ${{ secrets.EXPO_TOKEN }}
