--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
+    "expo-navigation-bar": "~3.0.7",
     "expo-router": "~3.5.24",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
