--- a/package.json
+++ b/package.json
@@ -17,47 +17,41 @@
     "@expo/vector-icons": "^14.0.0",
     "@gorhom/bottom-sheet": "^4.6.4",
     "@journeyapps/react-native-quick-sqlite": "^1.3.1",
-    "@powersync/attachments": "^2.1.0",
-    "@powersync/kysely-driver": "0.4.0",
-    "@powersync/react-native": "^1.12.0",
+    "@powersync/attachments": "^2.1.2",
+    "@powersync/react-native": "1.15.1",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-navigation/native": "^6.1.7",
     "@supabase/supabase-js": "^2.38.4",
-    "base-64": "^1.0.0",
     "base64-arraybuffer": "^1.0.2",
-    "expo": "~51.0.39",
-    "expo-camera": "~15.0.16",
-    "expo-constants": "~16.0.2",
-    "expo-crypto": "~13.0.2",
-    "expo-dev-client": "~4.0.29",
-    "expo-image-picker": "~15.0.7",
-    "expo-linking": "~6.3.1",
-    "expo-location": "~17.0.1",
-    "expo-navigation-bar": "~3.0.7",
-    "expo-router": "~3.5.24",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-updates": "^0.25.27",
-    "expo-web-browser": "~13.0.3",
+    "expo": "^52.0.0",
+    "expo-camera": "~16.0.5",
+    "expo-constants": "~17.0.3",
+    "expo-crypto": "~14.0.1",
+    "expo-dev-client": "~5.0.2",
+    "expo-image-picker": "~16.0.2",
+    "expo-linking": "~7.0.2",
+    "expo-location": "~18.0.1",
+    "expo-navigation-bar": "~4.0.3",
+    "expo-router": "~4.0.6",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.3",
+    "expo-updates": "~0.26.7",
+    "expo-web-browser": "~14.0.1",
     "lodash": "^4.17.21",
     "postgres": "^3.4.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.2",
     "react-native-elements": "^3.4.3",
-    "react-native-fast-image": "^8.6.3",
     "react-native-fetch-api": "^3.0.0",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "~1.11.0",
-    "react-native-map-clustering": "^3.4.2",
-    "react-native-maps": "1.14.0",
+    "react-native-maps": "1.18.0",
     "react-native-polyfill-globals": "^3.1.0",
-    "react-native-prompt-android": "^1.1.0",
     "react-native-ratings": "^8.1.0",
-    "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated": "~3.16.1",
     "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "^4.0.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
     "text-encoding": "^0.7.0",
@@ -68,9 +62,10 @@
     "@babel/core": "^7.24.0",
     "@babel/plugin-transform-async-generator-functions": "^7.24.3",
     "@types/lodash": "^4.17.7",
-    "@types/react": "~18.2.79",
+    "@types/react": "~18.3.12",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
+    "depcheck": "^1.4.7",
     "eslint": "^8.57.0",
     "eslint-config-universe": "^12.0.1",
     "prettier": "^3.2.5",
@@ -81,9 +76,12 @@
   },
   "expo": {
     "install": {
-      "exclude": [
-        "react-native-safe-area-context"
-      ]
+      "exclude": []
+    },
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
     }
   },
   "private": true
