--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@azure/core-asynciterator-polyfill": "^1.0.2",
     "@expo/vector-icons": "^14.0.0",
     "@gorhom/bottom-sheet": "^4.6.4",
+    "@op-engineering/op-sqlite": "^10.1.0",
     "@powersync/attachments": "^2.1.2",
+    "@powersync/op-sqlite": "^0.1.1",
     "@powersync/react-native": "1.15.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@supabase/supabase-js": "^2.38.4",
