--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Deelbaar",
+  "name": "deelbaar",
   "version": "0.0.1",
   "main": "expo-router/entry",
   "scripts": {
@@ -15,12 +15,12 @@
   "dependencies": {
     "@azure/core-asynciterator-polyfill": "^1.0.2",
     "@expo/vector-icons": "^14.0.0",
-    "@gorhom/bottom-sheet": "^4.6.4",
+    "@gorhom/bottom-sheet": "5.0.6",
     "@op-engineering/op-sqlite": "^10.1.0",
     "@powersync/attachments": "^2.1.2",
     "@powersync/op-sqlite": "^0.1.1",
     "@powersync/react-native": "1.15.1",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "2.1.0",
     "@supabase/supabase-js": "^2.38.4",
     "base64-arraybuffer": "^1.0.2",
     "expo": "^52.0.0",
@@ -44,33 +44,33 @@
     "react-native": "0.76.2",
     "react-native-elements": "^3.4.3",
     "react-native-fetch-api": "^3.0.0",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "2.21.1",
     "react-native-get-random-values": "~1.11.0",
-    "react-native-maps": "1.18.0",
+    "react-native-maps": "1.20.0",
     "react-native-polyfill-globals": "^3.1.0",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "4.14.0",
     "react-native-screens": "^4.0.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
     "text-encoding": "^0.7.0",
-    "uuid": "^10.0.0",
-    "web-streams-polyfill": "3.2.1"
+    "uuid": "11.0.3",
+    "web-streams-polyfill": "4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@babel/plugin-transform-async-generator-functions": "^7.24.3",
     "@types/lodash": "^4.17.7",
     "@types/react": "~18.3.12",
-    "@typescript-eslint/eslint-plugin": "^7.7.0",
-    "@typescript-eslint/parser": "^7.7.0",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
     "depcheck": "^1.4.7",
-    "eslint": "^8.57.0",
-    "eslint-config-universe": "^12.0.1",
+    "eslint": "^9.15.0",
+    "eslint-config-universe": "14.0.0",
     "prettier": "^3.2.5",
-    "typescript": "~5.3.3"
+    "typescript": "5.6.3"
   },
   "eslintConfig": {
     "extends": "universe/native"
@@ -84,6 +84,5 @@
         "listUnknownPackages": false
       }
     }
-  },
-  "private": true
+  }
 }
