--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo-location": "~18.0.1",
     "expo-navigation-bar": "~4.0.3",
     "expo-router": "~4.0.6",
+    "expo-splash-screen": "~0.29.11",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.3",
     "expo-updates": "~0.26.7",
