--- a/.github/workflows/android-preview-build.yml
+++ b/.github/workflows/android-preview-build.yml
@@ -19,6 +19,11 @@ jobs:
           cache: 'yarn'
           cache-dependency-path: 'yarn.lock'
 
+      - name: Install Yarn 4.x via Corepack
+        run: |
+          corepack enable
+          corepack prepare yarn@4.5.3 --activate
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
