--- a/eas.json
+++ b/eas.json
@@ -4,19 +4,23 @@
     "appVersionSource": "remote"
   },
   "build": {
-    "development": {
-      "developmentClient": true,
-      "distribution": "internal",
-      "channel": "development"
+    "ios": {
+      "simulator": {
+        "buildType": "debug",
+        "distribution": "internal",
+        "device": false
+      }
     },
-    "production": {
-      "autoIncrement": true,
-      "channel": "production",
-      "distribution": "store"
-    },
-    "simulator": {
-      "ios": {
-        "simulator": true
+    "android":{
+      "development": {
+        "developmentClient": true,
+        "distribution": "internal",
+        "channel": "development"
+      },
+      "production": {
+        "autoIncrement": true,
+        "channel": "production",
+        "distribution": "store"
       }
     }
   },
