--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "expo-web-browser": "~14.0.1",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^18.3.1",F
     "react-native": "^0.76.3",
     "react-native-elements": "^3.4.3",
     "react-native-fetch-api": "^3.0.0",
@@ -71,5 +71,6 @@
     "globals": "^15.12.0",
     "typescript": "5.6.3",
     "typescript-eslint": "^8.15.0"
-  }
+  },
+  "packageManager": "yarn@4.5.3+sha512.3003a14012e2987072d244c720506549c1aab73ee728208f1b2580a9fd67b92d61ba6b08fe93f6dce68fd771e3af1e59a0afa28dd242dd0940d73b95fedd4e90"
 }
