--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "expo-web-browser": "~14.0.1",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",F
+    "react-dom": "^18.3.1",
     "react-native": "^0.76.3",
     "react-native-elements": "^3.4.3",
     "react-native-fetch-api": "^3.0.0",
