--- a/package.json
+++ b/package.json
@@ -16,11 +16,10 @@
     "@babel/core": "^7.26.0",
     "@expo/vector-icons": "^14.0.0",
     "@gorhom/bottom-sheet": "5.0.6",
-    "@op-engineering/op-sqlite": "^10.1.0",
+    "@journeyapps/react-native-quick-sqlite": "^2.2.0",
     "@powersync/attachments": "^2.1.2",
     "@powersync/common": "^1.22.0",
-    "@powersync/op-sqlite": "^0.1.3",
-    "@powersync/react-native": "1.15.1",
+    "@powersync/react-native": "^1.16.1",
     "@react-native-async-storage/async-storage": "2.1.0",
     "@react-native-picker/picker": "^2.9.0",
     "@supabase/supabase-js": "^2.38.4",
@@ -62,6 +61,7 @@
     "web-streams-polyfill": "4.0.0"
   },
   "devDependencies": {
+    "@babel/plugin-transform-async-generator-functions": "^7.25.9",
     "@eslint/js": "^9.15.0",
     "@types/babel__core": "^7",
     "@types/base-64": "^1",
