--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/babel__core": "^7",
     "@types/base-64": "^1",
     "@types/react": "~18.3.12",
+    "eas-cli": "^14.0.2",
     "eslint": "^9.15.0",
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.12.0",
