--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     "expo-updates": "~0.26.7",
     "expo-web-browser": "~14.0.1",
     "postgres": "^3.4.4",
-    "react": "^18.3.1",
+    "react": "18.3.1",
     "react-dom": "^18.3.1",
-    "react-native": "^0.76.3",
+    "react-native": "0.76.3",
     "react-native-elements": "^3.4.3",
     "react-native-fetch-api": "^3.0.0",
     "react-native-gesture-handler": "2.21.1",
@@ -71,6 +71,8 @@
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.12.0",
     "typescript": "5.6.3",
-    "typescript-eslint": "^8.15.0"
-  }
+    "typescript-eslint": "^8.15.0",
+    "@babel/core": "^7.20.0"
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
