--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,15 +34,18 @@ jobs:
       matrix:
         node: [18.x]
     steps:
+      # Step 1: Checkout repository
       - name: 🏗 Setup repo
         uses: actions/checkout@v4
 
+      # Step 2: Set up Node.js and Yarn
       - name: 🏗 Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node }}
           cache: yarn
 
+      # Step 3: Set up Expo and EAS CLI
       - name: 🏗 Setup Expo and EAS
         uses: expo/expo-github-action@v8
         with:
@@ -50,12 +53,26 @@ jobs:
           expo-version: latest
           eas-version: latest
 
+      # Step 4: Clear Yarn cache (optional)
       - name: Clear Yarn cache
         run: yarn cache clean
 
+      # Step 5: Install dependencies
       - name: 📦 Install dependencies
         run: yarn install
 
+      # Step 6: Prebuild the app (generates native projects)
+      - name: 🏗 Prebuild the project
+        run: |
+          expo prebuild --platform=${{ github.event.inputs.platform }}
+
+      # Step 8: Install pods (only for iOS)
+      - name: Install CocoaPods
+        if: ${{ github.event.inputs.platform == 'ios' }}
+        run: |
+          cd ios && pod install
+
+      # Step 9: Build the app
       - name: 👷 Build app
         run: |
           eas build --local \
@@ -63,7 +80,8 @@ jobs:
             --output=./app-build/output \
             --platform=${{ github.event.inputs.platform }} \
             --profile=${{ github.event.inputs.profile }}
-            
+
+      # Step 10: Upload artifacts for Android
       - name: Upload Android APK
         if: ${{ github.event.inputs.platform == 'android' }}
         uses: actions/upload-artifact@v4
@@ -71,6 +89,7 @@ jobs:
           name: app-android-${{ github.event.inputs.profile }}
           path: ./app-build/output/*.apk
 
+      # Step 11: Upload artifacts for iOS
       - name: Upload iOS IPA
         if: ${{ github.event.inputs.platform == 'ios' }}
         uses: actions/upload-artifact@v4
@@ -78,6 +97,7 @@ jobs:
           name: app-ios-${{ github.event.inputs.profile }}
           path: ./app-build/output/*.app
 
+      # Step 12: Submit the build (optional)
       - name: 🚢 Submit
         if: ${{ github.event.inputs.should_submit }}
         run: |
