--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@azure/core-asynciterator-polyfill": "^1.0.2",
     "@expo/vector-icons": "^14.0.0",
     "@gorhom/bottom-sheet": "5.0.6",
-    "@op-engineering/op-sqlite": "^10.1.0",
+    "@op-engineering/op-sqlite": "^11.2.3",
     "@powersync/attachments": "^2.1.2",
-    "@powersync/op-sqlite": "^0.1.1",
-    "@powersync/react-native": "1.15.1",
+    "@powersync/common": "^1.22.0",
+    "@powersync/op-sqlite": "^0.1.3",
+    "@powersync/react-native": "^1.16.1",
     "@react-native-async-storage/async-storage": "2.1.0",
     "@supabase/supabase-js": "^2.38.4",
+    "base-64": "^1.0.0",
     "base64-arraybuffer": "^1.0.2",
     "expo": "^52.0.0",
     "expo-camera": "~16.0.5",
@@ -55,6 +57,7 @@
     "react-native-safe-area-context": "4.14.0",
     "react-native-screens": "^4.0.0",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "text-encoding": "^0.7.0",
     "uuid": "11.0.3",
@@ -63,6 +66,7 @@
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@babel/plugin-transform-async-generator-functions": "^7.24.3",
+    "@types/base-64": "^1",
     "@types/lodash": "^4.17.7",
     "@types/react": "~18.3.12",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
@@ -72,5 +76,6 @@
     "eslint-config-universe": "14.0.0",
     "prettier": "^3.2.5",
     "typescript": "5.6.3"
-  }
+  },
+  "packageManager": "yarn@4.5.3+sha512.3003a14012e2987072d244c720506549c1aab73ee728208f1b2580a9fd67b92d61ba6b08fe93f6dce68fd771e3af1e59a0afa28dd242dd0940d73b95fedd4e90"
 }
