--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.14.0",
     "react-native-screens": "^4.0.0",
+    "react-native-ui-datepicker": "^2.0.4",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
@@ -76,5 +77,6 @@
     "eslint-config-universe": "14.0.0",
     "prettier": "^3.2.5",
     "typescript": "5.6.3"
-  }
+  },
+  "packageManager": "yarn@4.5.3+sha512.3003a14012e2987072d244c720506549c1aab73ee728208f1b2580a9fd67b92d61ba6b08fe93f6dce68fd771e3af1e59a0afa28dd242dd0940d73b95fedd4e90"
 }
