find better package

--- a/package.json
+++ b/package.json
@@ -17,9 +17,8 @@
     "@expo/vector-icons": "^14.0.3",
     "@gorhom/bottom-sheet": "5.0.6",
     "@journeyapps/react-native-quick-sqlite": "2.1.2",
-    "@powersync/attachments": "2.0.12",
-    "@powersync/common": "1.22.0",
-    "@powersync/react": "1.5.1",
+    "@powersync/attachments": "^2.1.2",
+    "@powersync/common": "1.21.0",
     "@powersync/react-native": "1.15.1",
     "@supabase/supabase-js": "~2.33.1",
     "base64-arraybuffer": "^1.0.2",
