--- a/.github/workflows/android-preview-build.yml
+++ b/.github/workflows/android-preview-build.yml
@@ -1,9 +1,8 @@
 name: Android App APK Build
 
 on:
-  pull_request:
-    branches:
-      - develop
+  workflow_dispatch:
+  # Trigger for manual build
 
 jobs:
   build:
