--- a/.github/workflows/android-preview-build.yml
+++ b/.github/workflows/android-preview-build.yml
@@ -38,7 +38,7 @@ jobs:
         run: yarn install --frozen-lockfile
 
       - name: Build Android app
-        run: eas build --platform android --profile development --local --output ${{ github.workspace }}/app-development.apk
+        run: eas build --platform android --user development --local --output ${{ github.workspace }}/app-development.apk
         
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
