--- a/.github/workflows/ios-preview-build.yml
+++ b/.github/workflows/ios-preview-build.yml
@@ -28,7 +28,7 @@ jobs:
         run: yarn install
 
       - name: Build iOS app for Simulator
-        run: eas build --platform ios --profile preview --local --non-interactive --output ${{ github.workspace }}/app-preview.app
+        run: eas build --platform ios --user preview --local --non-interactive --output ${{ github.workspace }}/app-preview.app
 
       - name: Upload iOS simulator artifact
         uses: actions/upload-artifact@v4
