--- a/hidden/android-development-build.yml
+++ b/hidden/android-development-build.yml
@@ -38,7 +38,7 @@ jobs:
         run: yarn install --frozen-lockfile
 
       - name: Build Android app
-        run: eas build --platform android --profile preview --local --output ${{ github.workspace }}/app-release.apk
+        run: eas build --platform android --user preview --local --output ${{ github.workspace }}/app-release.apk
       - name: Upload APK artifact
         uses: actions/upload-artifact@v2
         with:
